CubeProgrammer_API.h

/**
 * \struct  i2cConnectParameters
 * \brief   Specify the I2C connect parameters.
 * \warning The Bootloader Slave address varies depending on the device (see AN2606).
 * \note    Not all configurations are supported by STM32 Bootloader, such as address in 7 bits form, analog filter: ENABLE, digital filter: DISABLE.
 * \note    Recommended I2C parameters : add=0x??, br=400, sm=1, am=0, af=1, df=0, dnf=0, rt=0, ft=0
 */
typedef struct i2cConnectParameters
{
    int add      ;               /**< Device address in hex format. */
    int br       ;               /**< Baudrate and speed transmission : 100 or 400 KHz. */
    int sm       ;               /**< Speed Mode: STANDARD or FAST. */
    int am       ;               /**< Address Mode: 7 or 10 bits. */
    int af       ;               /**< Analog filter: DISABLE or ENABLE. */
    int df       ;               /**< Digital filter: DISABLE or ENABLE. */
    char dnf     ;               /**< Digital noise filter: 0 to 15. */
    int rt       ;               /**< Rise time: 0-1000 for STANDARD speed mode and  0-300 for FAST. */
    int ft       ;               /**< Fall time: 0-300 for STANDARD speed mode and  0-300 for FAST. */

} i2cConnectParameters;
/* -------------------------------------------------------------------------------------------- */
/*                           STLINK Data Structures and Enumerations                            */
/* -------------------------------------------------------------------------------------------- */

/**
 * \enum  debugResetMode
 * \brief Choose the way to apply a system reset.
 */
typedef enum debugResetMode
{
    SOFTWARE_RESET,         /**< Apply a reset by the software. */
    HARDWARE_RESET,         /**< Apply a reset by the hardware. */
    CORE_RESET              /**< Apply a reset by the internal core peripheral. */
}debugResetMode;
/**
 * \enum  debugConnectMode
 * \brief Choose the appropriate mode for connection.
 */
typedef enum debugConnectMode
{
    NORMAL_MODE,            /**< Connect with normal mode, the target is reset then halted while the type of reset is selected using the [debugResetMode]. */
    HOTPLUG_MODE,           /**< Connect with hotplug mode,  this option allows the user to connect to the target without halt or reset. */
    UNDER_RESET_MODE,       /**< Connect with under reset mode, option allows the user to connect to the target using a reset vector catch before executing any instruction. */
    POWER_DOWN_MODE,        /**< Connect with power down mode. */
    PRE_RESET_MODE          /**< Connect with pre reset mode. */
}debugConnectMode;
/**
 * \enum  debugPort
 * \brief Select the debug port interface for connection.
 */
typedef enum debugPort
{
    JTAG = 0,               /**< JTAG debug port. */
    SWD = 1,                /**< SWD debug port. */
}debugPort;
/**
 * \struct  frequencies
 * \brief   Get supported frequencies for JTAG and SWD ineterfaces.
 */
typedef struct frequencies
{
    unsigned int jtagFreq[12];          /**<  JTAG frequency. */
    unsigned int jtagFreqNumber;        /**<  Get JTAG supported frequencies. */
    unsigned int swdFreq[12];           /**<  SWD frequency. */
    unsigned int swdFreqNumber;         /**<  Get SWD supported frequencies. */
}frequencies;
/**
 * \struct  debugConnectParameters
 * \brief   Get device characterization and specify connection parameters through ST-LINK interface.
 */
typedef struct debugConnectParameters
{
    debugPort dbgPort;                  /**< Select the type of debug interface #debugPort. */
    int index;                          /**< Select one of the debug ports connected. */
    char serialNumber[33];              /**< ST-LINK serial number. */
    char firmwareVersion[20];           /**< Firmware version. */
    char targetVoltage[5];              /**< Operate voltage. */
    int accessPortNumber;               /**< Number of available access port. */
    int accessPort;                     /**< Select access port controller. */
    debugConnectMode connectionMode;    /**< Select the debug CONNECT mode #debugConnectMode. */
    debugResetMode resetMode;           /**< Select the debug RESET mode #debugResetMode. */
    int isOldFirmware;                  /**< Check Old ST-LINK firmware version. */
    frequencies freq;                   /**< Supported frequencies #frequencies. */
    int frequency;                      /**< Select specific frequency. */
    int isBridge;                       /**< Indicates if it's Bridge device or not. */
    int shared;                         /**< Select connection type, if it's shared, use ST-LINK Server. */
    char board[100];                    /**< board Name */
}debugConnectParameters;
/**
 * \brief This routine used to apply a target reset.
 * \note  Reset operation is only available with JTAG/SWD debug interface.
 * \param rstMode : Indicates the reset type Soft/Hard/Core #debugResetMode. \n
 * \return 0 if the reset operation finished successfully, otherwise an error occurred.
 */
int reset(debugResetMode rstMode) ;