caller/src/bindings.rs

#[doc = " \\struct  i2cConnectParameters"]
#[doc = " \\brief   Specify the I2C connect parameters."]
#[doc = " \\warning The Bootloader Slave address varies depending on the device (see AN2606)."]
#[doc = " \\note    Not all configurations are supported by STM32 Bootloader, such as address in 7 bits form, analog filter: ENABLE, digital filter: DISABLE."]
#[doc = " \\note    Recommended I2C parameters : add=0x??, br=400, sm=1, am=0, af=1, df=0, dnf=0, rt=0, ft=0"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct i2cConnectParameters {
    #[doc = "< Device address in hex format."]
    pub add: ::std::os::raw::c_int,
    #[doc = "< Baudrate and speed transmission : 100 or 400 KHz."]
    pub br: ::std::os::raw::c_int,
    #[doc = "< Speed Mode: STANDARD or FAST."]
    pub sm: ::std::os::raw::c_int,
    #[doc = "< Address Mode: 7 or 10 bits."]
    pub am: ::std::os::raw::c_int,
    #[doc = "< Analog filter: DISABLE or ENABLE."]
    pub af: ::std::os::raw::c_int,
    #[doc = "< Digital filter: DISABLE or ENABLE."]
    pub df: ::std::os::raw::c_int,
    #[doc = "< Digital noise filter: 0 to 15."]
    pub dnf: ::std::os::raw::c_char,
    #[doc = "< Rise time: 0-1000 for STANDARD speed mode and  0-300 for FAST."]
    pub rt: ::std::os::raw::c_int,
    #[doc = "< Fall time: 0-300 for STANDARD speed mode and  0-300 for FAST."]
    pub ft: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_i2cConnectParameters() {
    assert_eq!(
        ::std::mem::size_of::<i2cConnectParameters>(),
        36usize,
        concat!("Size of: ", stringify!(i2cConnectParameters))
    );
    assert_eq!(
        ::std::mem::align_of::<i2cConnectParameters>(),
        4usize,
        concat!("Alignment of ", stringify!(i2cConnectParameters))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).add as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(add)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).br as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(br)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).sm as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(sm)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).am as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(am)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).af as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(af)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).df as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(df)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).dnf as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(dnf)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).rt as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(rt)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<i2cConnectParameters>())).ft as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(i2cConnectParameters),
            "::",
            stringify!(ft)
        )
    );
}
#[doc = "< Apply a reset by the software."]
pub const debugResetMode_SOFTWARE_RESET: debugResetMode = 0;
#[doc = "< Apply a reset by the hardware."]
pub const debugResetMode_HARDWARE_RESET: debugResetMode = 1;
#[doc = "< Apply a reset by the internal core peripheral."]
pub const debugResetMode_CORE_RESET: debugResetMode = 2;
#[doc = " \\enum  debugResetMode"]
#[doc = " \\brief Choose the way to apply a system reset."]
pub type debugResetMode = ::std::os::raw::c_int;
#[doc = "< Connect with normal mode, the target is reset then halted while the type of reset is selected using the [debugResetMode]."]
pub const debugConnectMode_NORMAL_MODE: debugConnectMode = 0;
#[doc = "< Connect with hotplug mode,  this option allows the user to connect to the target without halt or reset."]
pub const debugConnectMode_HOTPLUG_MODE: debugConnectMode = 1;
#[doc = "< Connect with under reset mode, option allows the user to connect to the target using a reset vector catch before executing any instruction."]
pub const debugConnectMode_UNDER_RESET_MODE: debugConnectMode = 2;
#[doc = "< Connect with power down mode."]
pub const debugConnectMode_POWER_DOWN_MODE: debugConnectMode = 3;
#[doc = "< Connect with pre reset mode."]
pub const debugConnectMode_PRE_RESET_MODE: debugConnectMode = 4;
#[doc = " \\enum  debugConnectMode"]
#[doc = " \\brief Choose the appropriate mode for connection."]
pub type debugConnectMode = ::std::os::raw::c_int;
#[doc = "< JTAG debug port."]
pub const debugPort_JTAG: debugPort = 0;
#[doc = "< SWD debug port."]
pub const debugPort_SWD: debugPort = 1;
#[doc = " \\enum  debugPort"]
#[doc = " \\brief Select the debug port interface for connection."]
pub type debugPort = ::std::os::raw::c_int;
#[doc = " \\struct  frequencies"]
#[doc = " \\brief   Get supported frequencies for JTAG and SWD ineterfaces."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct frequencies {
    #[doc = "<  JTAG frequency."]
    pub jtagFreq: [::std::os::raw::c_uint; 12usize],
    #[doc = "<  Get JTAG supported frequencies."]
    pub jtagFreqNumber: ::std::os::raw::c_uint,
    #[doc = "<  SWD frequency."]
    pub swdFreq: [::std::os::raw::c_uint; 12usize],
    #[doc = "<  Get SWD supported frequencies."]
    pub swdFreqNumber: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_frequencies() {
    assert_eq!(
        ::std::mem::size_of::<frequencies>(),
        104usize,
        concat!("Size of: ", stringify!(frequencies))
    );
    assert_eq!(
        ::std::mem::align_of::<frequencies>(),
        4usize,
        concat!("Alignment of ", stringify!(frequencies))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<frequencies>())).jtagFreq as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(frequencies),
            "::",
            stringify!(jtagFreq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<frequencies>())).jtagFreqNumber as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(frequencies),
            "::",
            stringify!(jtagFreqNumber)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<frequencies>())).swdFreq as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(frequencies),
            "::",
            stringify!(swdFreq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<frequencies>())).swdFreqNumber as *const _ as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(frequencies),
            "::",
            stringify!(swdFreqNumber)
        )
    );
}
#[doc = " \\struct  debugConnectParameters"]
#[doc = " \\brief   Get device characterization and specify connection parameters through ST-LINK interface."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct debugConnectParameters {
    #[doc = "< Select the type of debug interface #debugPort."]
    pub dbgPort: debugPort,
    #[doc = "< Select one of the debug ports connected."]
    pub index: ::std::os::raw::c_int,
    #[doc = "< ST-LINK serial number."]
    pub serialNumber: [::std::os::raw::c_char; 33usize],
    #[doc = "< Firmware version."]
    pub firmwareVersion: [::std::os::raw::c_char; 20usize],
    #[doc = "< Operate voltage."]
    pub targetVoltage: [::std::os::raw::c_char; 5usize],
    #[doc = "< Number of available access port."]
    pub accessPortNumber: ::std::os::raw::c_int,
    #[doc = "< Select access port controller."]
    pub accessPort: ::std::os::raw::c_int,
    #[doc = "< Select the debug CONNECT mode #debugConnectMode."]
    pub connectionMode: debugConnectMode,
    #[doc = "< Select the debug RESET mode #debugResetMode."]
    pub resetMode: debugResetMode,
    #[doc = "< Check Old ST-LINK firmware version."]
    pub isOldFirmware: ::std::os::raw::c_int,
    #[doc = "< Supported frequencies #frequencies."]
    pub freq: frequencies,
    #[doc = "< Select specific frequency."]
    pub frequency: ::std::os::raw::c_int,
    #[doc = "< Indicates if it's Bridge device or not."]
    pub isBridge: ::std::os::raw::c_int,
    #[doc = "< Select connection type, if it's shared, use ST-LINK Server."]
    pub shared: ::std::os::raw::c_int,
    #[doc = "< board Name"]
    pub board: [::std::os::raw::c_char; 100usize],
}
